--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,14 @@
+dist: trusty
+sudo: false
+cache: yarn
+addons:
+  apt:
+    sources:
+      - sourceline: 'deb https://dl.yarnpkg.com/debian/ stable main'
+        key_url: 'https://dl.yarnpkg.com/debian/pubkey.gpg'
+    packages:
+      - yarn
+
 install:
     - yarn install
     - npm run build
