--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zobizob",
+  "name": "meridiens",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Frederic Langlade <flb@macbook-pro-de-frederic.home>",
